# sharedlib_example

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  buildenv.mk
src/: CMakeLists.txt  Makefile  dependent.c  main.c  runtime.c
src/cat_lib/: CMakeLists.txt  Makefile  cat.c  cat.h
src/dimakogan/: Makefile  tst.c  tst.cc  tstlib.c  tstlib.h
src/dog_lib/: CMakeLists.txt  Makefile  dog.c  dog.h
src/lib_rating/: Makefile  ratings.c  ratings.h
src/lib_rating_1/: CMakeLists.txt  Makefile  ratings.c  ratings.h
tests/cmockalib/: CMakeLists.txt
tests/test_dog_lib/: CMakeLists.txt  dog_test.c
